--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Tim Branyen (@tbranyen)",
   "license": "MIT",
   "scripts": {
+    "start": "http-server",
     "browserify": "browserify --standalone diffhtml lib/index.js -o dist/diffhtml.js",
     "watchify": "watchify --debug --standalone diffhtml lib/index.js -o dist/diffhtml.js",
     "jshint": "jshint lib/*.js",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "browserify": "^9.0.8",
     "browserify-istanbul": "^0.2.1",
+    "http-server": "^0.8.0",
     "istanbul": "^0.3.13",
     "jshint": "^2.7.0",
     "mocha": "^2.2.4",
